--- a/serverless.yml
+++ b/serverless.yml
@@ -4,11 +4,20 @@ service:
 plugins:
   - serverless-offline
   - serverless-webpack
+  - serverless-dynamodb-local
 
 custom:
   webpack:
     webpackConfig: ./webpack.config.js
     includeModules: true
+  dynamodb:
+    stages:
+      - dev
+      - local
+    start:
+      port: 8000
+      inMemory: true
+      migrate: true
 
 provider:
   name: aws
@@ -30,3 +39,23 @@ functions:
           path: /todos/{userid}
           method: GET
           cors: true
+
+resources:
+  Resources:
+    todos:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        TableName: todos
+        ProvisionedThroughput:
+          ReadCapacityUnits: 5
+          WriteCapacityUnits: 5
+        AttributeDefinitions:
+          - AttributeName: user_id
+            AttributeType: S
+          - AttributeName: id
+            AttributeType: S
+        KeySchema:
+          - AttributeName: user_id
+            KeyType: HASH
+          - AttributeName: id
+            KeyType: RANGE
